[package]
name = "musicbrainz_wikidata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.132", features=["derive"]}
serde_json = "1.0.73"
xz = "0.1.0"
tar = "0.4.38"
csv = "1.1.6"